增加 1、usrManager模块 修改 1、令牌切换需要手柄同步时，可以自动按确定。简化操作

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/tokenManager"]
 	path = lib/tokenManager
 	url = https://github.com/linbin823/Qt.711.2016.tokenManager.git
+[submodule "lib/usrManager"]
+	path = lib/usrManager
+	url = https://github.com/linbin823/Qt.711.2016.UsrManager.git
