增加： 1、增加软键盘：全键盘支持拼音中文输入 小键盘支持数字输入
修改：
1、配合软键盘，修改输入控件的类型

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/usrManager"]
 	path = lib/usrManager
 	url = https://github.com/linbin823/Qt.711.2016.UsrManager.git
+[submodule "lib/inputMethod"]
+	path = lib/inputMethod
+	url = https://github.com/linbin823/Qt.reference.2016.InputMethod.git
